# abaxor-iot-visualization

./: .gitignore  README.md  ToDo_FiFo_Datablock.txt  iot-backend.service
backend/: Cargo.toml
backend/src/: fifo_stream.rs  flags.rs  handler.rs  macros.rs  main.rs  models.rs  oscillator.rs  parser.rs  reg_bank.rs  reg_fifo.rs  settings.rs  sys_log.rs
frontend/: index.html  script.js  style.css
