[package]
name = "iot-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
nix = "0.26.2"
log = "0.4.17"
env_logger = "0.10.0"
libc = "0.2"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
rand = "0.7"
bincode = "1.2"
syslog = "5.0.0"
colored  = "1.9"

[features]
verbose = []  # cargo build --features verbose
